syntax = "proto3";

option go_package = "github.com/eduardobcolombo/learning-grpc/internal/pkg/portpb";

package port;

message Port {
    string name = 1;
    string city = 2;
    string country = 3;
    repeated string alias = 4;
    repeated string regions = 5;
    Coordinates coordinates = 6;
    string province = 7;
    string timezone = 8;
    Unlocs unlocs = 9;
    string code = 10;
    int32 id = 11;
}

message Coordinates {
    double lat = 1;
    double long = 2;
}

message Unlocs {
    repeated string unloc = 1;
}

message PortRequest {
    Port port = 1;
}

message PortResponse {
    string result = 1;
}

message RetrievePortsRequest {

}

message RetrievePortsResponse {
    Port port = 1;
}

service PortService{
    // Client Streaming
    rpc Update (stream PortRequest) returns (PortResponse) {};
    // Server Streaming
    rpc Retrieve(RetrievePortsRequest) returns (stream RetrievePortsResponse) {};
}